Blog Page & Links Updated

--- a/website/templates/blog.html
+++ b/website/templates/blog.html
@@ -55,14 +55,14 @@
     </div>
     <!-- Top Header End -->
 
-    <!-- Main Header Start -->
+    <!-- Main Header Start --> 
     <div class="main-header-area">
       <div class="classy-nav-container breakpoint-off">
         <div class="container">
           <!-- Classy Menu -->
           <nav class="classy-navbar justify-content-between" id="dentoNav">
- 
-            <!-- Logo --> 
+
+            <!-- Logo -->
             <a class="nav-brand" href="{% url 'home' %}"><img src="{% static 'website/img/core-img/logo.png' %}" alt=""></a>
 
             <!-- Navbar Toggler -->
@@ -111,12 +111,12 @@
   </header>
   <!-- ***** Header Area End ***** -->
 
-  <!-- ***** Breadcrumb Area Start ***** -->  
+  <!-- ***** Breadcrumb Area Start ***** --> 
   <div class="breadcumb-area bg-img bg-gradient-overlay" style="background-image: url({% static 'website/img/bg-img/12.jpg' %});">
     <div class="container h-100">
       <div class="row h-100 align-items-center">
         <div class="col-12">
-          <h2 class="title">Service</h2>
+          <h2 class="title">Blog</h2>
         </div>
       </div>
     </div>
@@ -128,7 +128,7 @@
           <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
               <li class="breadcrumb-item"><a href="{% url 'home' %}"><i class="fa fa-home"></i> Home</a></li>
-              <li class="breadcrumb-item active" aria-current="page">Service</li>
+              <li class="breadcrumb-item active" aria-current="page">Blog</li>
             </ol>
           </nav>
         </div>
@@ -137,214 +137,178 @@
   </div>
   <!-- ***** Breadcrumb Area End ***** -->
 
-  <!-- ***** Services Area Start ***** -->
-  <section class="dento-services-area mt-50 mb-50">
+  <!-- *****Blog Area Start ***** -->
+  <section class="dento-blog-area mt-50">
     <div class="container">
       <div class="row">
+        <div class="col-12 col-lg-8">
 
-        <!-- Single Service Area --> 
-        <div class="col-12 col-sm-6 col-lg-4">
-          <div class="single-service--area text-center mb-50">
-            <div class="icon--">
-              <img src="{% static 'website/img/core-img/s6.png' %}" alt="">
-            </div>
-            <h5>Teeth Whitening</h5>
-            <p>Transform your smile with professional teeth whitening treatments that remove stains and brighten your teeth for a radiant appearance.</p>
-          </div>
-        </div>
-
-        <!-- Single Service Area --> 
-        <div class="col-12 col-sm-6 col-lg-4">
-          <div class="single-service--area text-center mb-50">
-            <div class="icon--">
-              <img src="{% static 'website/img/core-img/s7.png' %}" alt="">
-            </div>
-            <h5>Dental Implants</h5>
-            <p>Restore your missing teeth and regain a natural-looking smile with durable and lifelike dental implants. Enhance your oral health and confidence.</p>
-          </div>
-        </div>
-
-        <!-- Single Service Area --> 
-        <div class="col-12 col-sm-6 col-lg-4">
-          <div class="single-service--area text-center mb-50">
-            <div class="icon--">
-              <img src="{% static 'website/img/core-img/s8.png' %}" alt="">
-            </div>
-            <h5>Missing Teeth</h5>
-            <p>Regain the functionality and aesthetics of your smile with innovative solutions for missing teeth, such as dental bridges or dentures, customized to restore your confidence and oral function.</p>
-          </div>
-        </div>
-
-        <!-- Single Service Area --> 
-        <div class="col-12 col-sm-6 col-lg-4">
-          <div class="single-service--area text-center mb-50">
-            <div class="icon--">
-              <img src="{% static 'website/img/core-img/s9.png' %}" alt="">
-            </div>
-            <h5>Cosmetic Dentistry</h5>
-            <p>Unlock your perfect smile through cosmetic dentistry procedures that enhance your teeth's appearance, including veneers, teeth whitening, and smile makeovers.</p>
-          </div>
-        </div>
-
-        <!-- Single Service Area --> 
-        <div class="col-12 col-sm-6 col-lg-4">
-          <div class="single-service--area text-center mb-50">
-            <div class="icon--">
-              <img src="{% static 'website/img/core-img/s10.png' %}" alt="">
-            </div>
-            <h5>Examination</h5>
-            <p>Experience thorough dental examinations to ensure optimal oral health, with comprehensive assessments, X-rays, and personalized treatment plans tailored to your needs.</p>
-          </div>
-        </div>
-
-        <!-- Single Service Area --> 
-        <div class="col-12 col-sm-6 col-lg-4">
-          <div class="single-service--area text-center mb-50">
-            <div class="icon--">
-              <img src="{% static 'website/img/core-img/s6.png' %}" alt="">
-            </div>
-            <h5>Teeth Pain</h5>
-            <p>Find relief from teeth pain with expert dental care, including accurate diagnosis, targeted treatments, and personalized solutions to alleviate discomfort and restore your oral health.</p>
-          </div>
-        </div>
-
-      </div>
-    </div>
-  </section>
-  <!-- ***** Services Area End ***** -->
-
-  <!-- ***** Testimonials Area Start ***** --> 
-  <section class="testimonials-area section-padding-100 bg-img bg-gradient-overlay jarallax clearfix" style="background-image: url('{% static 'website/img/bg-img/7.jpg' %}');">
-    <div class="container">
-      <div class="row">
-        <div class="col-12">
-          <!-- Testimonials Slides --> 
-          <div class="testimonials-slides owl-carousel">
-            <!-- Single Testimonials Slide -->
-            <div class="single-testimonial-slide d-flex align-items-center">
-              <!-- Thumbnail -->
-              <div class="testimonial-thumb">
-                <img src="{% static 'website/img/bg-img/8.jpg' %}" alt="">
-              </div>
-              <!-- Content -->
-              <div class="testimonial-content">
-              <h5>"Exceptional care, skilled team, advanced technology, preventive focus, and patient-centered approach. A top-notch dental experience!"</h5>
-                <h6>Jacob Thompson</h6>
-                <p>Dental Patient</p>
-              </div>
-            </div>
-
-            <!-- Single Testimonials Slide --> 
-            <div class="single-testimonial-slide d-flex align-items-center">
-              <!-- Thumbnail -->
-              <div class="testimonial-thumb">
-                <img src="{% static 'website/img/bg-img/8.jpg' %}" alt="">
-              </div>
-              <!-- Content -->
-              <div class="testimonial-content">
-                <h5>"Outstanding dental practice! Compassionate staff, state-of-the-art facility, personalized care, and a focus on oral health education. Highly recommended!"</h5>
-                <h6>Ethan Williams</h6>
-                <p>Dental Patient</p>
-              </div>
-            </div>
-
-            <!-- Single Testimonials Slide --> 
-            <div class="single-testimonial-slide d-flex align-items-center">
-              <!-- Thumbnail -->
-              <div class="testimonial-thumb">
-                <img src="{% static 'website/img/bg-img/8.jpg' %}" alt="">
-              </div>
-              <!-- Content -->
-              <div class="testimonial-content">
-                <h5>“Absolutely thrilled with my dental experience! The staff was friendly, the facility was modern, and the care was exceptional. Highly satisfied!”</h5>
-                <h6>Nathan Johnson</h6>
-                <p>Dental Patient</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  <!-- ***** Testimonials Area End ***** -->
-
-  <!-- ***** Blog Area Start ***** -->
-  <section class="dento-blog-area section-padding-100-0 clearfix">
-    <div class="container">
-      <div class="row">
-        <!-- Section Heading -->
-        <div class="col-12">
-          <div class="section-heading text-center">
-            <h2>Latest News</h2>
-            <div class="line"></div>
-          </div>
-        </div>
-      </div>
-
-      <div class="row">
-        <!-- Single Blog Item --> 
-        <div class="col-12 col-md-6 col-lg-4">
-          <div class="single-blog-item mb-100">
-            <a href="./blog-details.html">
-              <img src="{% static 'website/img/bg-img/4.jpg' %}" alt="">
-            </a>
+          <!-- Single Blog Item --> 
+          <div class="single-blog-item style-2 d-flex flex-wrap align-items-center mb-50">
             <!-- Blog Content -->
             <div class="blog-content">
-              <a href="./blog-details.html" class="post-title">Groundbreaking Study Reveals Link Between Oral Health and Heart Disease</a>
-              <p>A groundbreaking study conducted by leading researchers uncovers a strong correlation between oral health and heart disease, highlighting the importance of dental care in maintaining overall cardiovascular well-being. This finding revolutionises our understanding of oral-systemic health connections.</p>
+              <a href="{% url 'blog' %}" class="post-title">New Study Reveals Link Between Oral Health and Heart Disease Risk</a>
+              <p>Recent research highlights a strong correlation between gum disease and increased risk of developing cardiovascular problems, emphasizing the importance of dental care for heart health.</p>
               <div class="post-meta">
                 <a href="#"><i class="icon_clock_alt"></i> 23 Jun 2023</a>
                 <a href="#"><i class="icon_chat_alt"></i> 3 Comments</a>
               </div>
             </div>
           </div>
-        </div>
 
-        <!-- Single Blog Item --> 
-        <div class="col-12 col-md-6 col-lg-4">
-          <div class="single-blog-item mb-100">
-            <a href="./blog-details.html">
-              <img src="{% static 'website/img/bg-img/5.jpg' %}" alt="">
-            </a>
+          <!-- Single Blog Item -->
+          <div class="single-blog-item style-2 d-flex flex-wrap align-items-center mb-50">
+            <!-- Blog Thumbnail -->
+            <div class="blog-thumbnail">
+              <a href="{% url 'blog' %}">
+                <img src="{% static 'website/img/bg-img/17.jpg' %}" alt="">
+              </a>
+            </div>
             <!-- Blog Content -->
             <div class="blog-content">
-              <a href="./blog-details.html" class="post-title">Innovative Dental Technology Revolutionises Smile Transformations</a>
-              <p>Cutting-edge dental technology advancements are reshaping smile makeovers, offering faster, more precise treatments with outstanding aesthetic results. From 3D smile simulations to digital smile design, patients now have access to transformative dental solutions like never before.</p>
+              <a href="{% url 'blog' %}" class="post-title">Breakthrough in Dental Technology: 3D Printing Revolutionizes Dental Implants</a>
+              <p>Advanced 3D printing techniques have revolutionized the field of dentistry, allowing for precise and customized dental implant solutions with improved patient outcomes.</p>
               <div class="post-meta">
                 <a href="#"><i class="icon_clock_alt"></i> 23 Jun 2023</a>
                 <a href="#"><i class="icon_chat_alt"></i> 3 Comments</a>
               </div>
             </div>
           </div>
-        </div>
 
-        <!-- Single Blog Item --> 
-        <div class="col-12 col-md-6 col-lg-4">
-          <div class="single-blog-item mb-100">
-            <a href="./blog-details.html">
-              <img src="{% static 'website/img/bg-img/6.jpg' %}" alt="">
-            </a>
+          <!-- Single Blog Item --> 
+          <div class="single-blog-item style-2 d-flex flex-wrap align-items-center mb-50">
+            <!-- Blog Thumbnail -->
+            <div class="blog-thumbnail">
+              <a href="{% url 'blog' %}">
+                <img src="{% static 'website/img/bg-img/18.jpg' %}" alt="">
+              </a>
+            </div>
             <!-- Blog Content -->
             <div class="blog-content">
-              <a href="./blog-details.html" class="post-title">New Breakthrough in Pain-Free Dentistry: Needle-Free Anesthesia</a>
-              <p>A revolutionary needle-free anesthesia technique is set to transform the dental experience. Using innovative air-pressure technology, patients can now undergo pain-free procedures without the discomfort associated with traditional injections, making dental visits more comfortable than ever.</p>
+              <a href="{% url 'blog' %}" class="post-title">AI-Powered Toothbrushes: The Future of Oral Hygiene?</a>
+              <p>Cutting-edge toothbrushes integrated with artificial intelligence (AI) technology offer real-time feedback on brushing technique, promoting better oral hygiene habits and prevention of dental issues.</p>
               <div class="post-meta">
                 <a href="#"><i class="icon_clock_alt"></i> 23 Jun 2023</a>
                 <a href="#"><i class="icon_chat_alt"></i> 3 Comments</a>
               </div>
             </div>
+          </div>
+
+          <!-- Single Blog Item --> 
+          <div class="single-blog-item style-2 d-flex flex-wrap align-items-center mb-50">
+            <!-- Blog Thumbnail -->
+            <div class="blog-thumbnail">
+              <a href="{% url 'blog' %}">
+                <img src="{% static 'website/img/bg-img/19.jpg' %}" alt="">
+              </a>
+            </div>
+            <!-- Blog Content -->
+            <div class="blog-content">
+              <a href="{% url 'blog' %}" class="post-title">Dental Clinics Embrace Virtual Reality for Anxiety-Free Dental Experiences</a>
+              <p>Virtual reality (VR) technology is being adopted by dental clinics to alleviate patient anxiety, providing immersive and calming experiences during dental procedures.</p>
+              <div class="post-meta">
+                <a href="#"><i class="icon_clock_alt"></i> 23 Jun 2023</a>
+                <a href="#"><i class="icon_chat_alt"></i> 3 Comments</a>
+              </div>
+            </div>
+          </div>
+
+          <!-- Single Blog Item --> 
+          <div class="single-blog-item style-2 d-flex flex-wrap align-items-center mb-50">
+            <!-- Blog Thumbnail -->
+            <div class="blog-thumbnail">
+              <a href="{% url 'blog' %}">
+                <img src="{% static 'website/img/bg-img/20.jpg' %}" alt="">
+              </a>
+            </div>
+            <!-- Blog Content -->
+            <div class="blog-content">
+              <a href="{% url 'blog' %}" class="post-title">Sugar-Free Chewing Gum: A Surprising Ally in Oral Health</a>
+              <p>Recent studies highlight the benefits of sugar-free chewing gum, such as stimulating saliva production and reducing plaque buildup, contributing to improved oral health and cavity prevention.</p>
+              <div class="post-meta">
+                <a href="#"><i class="icon_clock_alt"></i> 23 Jun 2023</a>
+                <a href="#"><i class="icon_chat_alt"></i> 3 Comments</a>
+              </div>
+            </div>
+          </div>
+
+          <!-- Pagination -->
+          <nav class="dento-pagination mb-100">
+            <ul class="pagination">
+              <li class="page-item active"><a class="page-link" href="#">1</a></li>
+              <li class="page-item"><a class="page-link" href="#">2</a></li>
+              <li class="page-item"><a class="page-link" href="#"><i class="fa fa-angle-right"></i></a></li>
+            </ul>
+          </nav>
+        </div>
+
+        <!-- Sidebar Area -->
+        <div class="col-12 col-lg-4">
+          <div class="dento-sidebar">
+
+            <!-- Single Widget Area -->
+            <div class="single-widget-area search-widget">
+              <form action="#" method="post">
+                <input type="search" name="search" class="form-control" placeholder="Search ...">
+                <button type="submit"><i class="icon_search"></i></button>
+              </form>
+            </div>
+
+            <!-- Single Widget Area --> 
+            <div class="single-widget-area news-widget">
+              <h5 class="widget-title">Recent News</h5>
+
+              <!-- Single News Area -->
+              <div class="single-news-area d-flex align-items-center">
+                <div class="blog-thumbnail">
+                  <img src="{% static 'website/img/bg-img/21.jpg' %}" alt="">
+                </div>
+                <div class="blog-content">
+                  <a href="#" class="post-title">Groundbreaking Study Reveals Link Between Oral Health and Heart Disease</a>
+                  <span class="post-date">23 Jun 2023</span>
+                </div>
+              </div>
+
+              <!-- Single News Area -->
+              <div class="single-news-area d-flex align-items-center">
+                <div class="blog-thumbnail">
+                  <img src="{% static 'website/img/bg-img/22.jpg' %}" alt="">
+                </div>
+                <div class="blog-content">
+                  <a href="#" class="post-title">Innovative Dental Technology Revolutionises Smile Transformations</a>
+                  <span class="post-date">23 Jun 2023</span>
+                </div>
+              </div>
+
+              <!-- Single News Area -->
+              <div class="single-news-area d-flex align-items-center">
+                <div class="blog-thumbnail">
+                  <img src="{% static 'website/img/bg-img/23.jpg' %}" alt="">
+                </div>
+                <div class="blog-content">
+                  <a href="#" class="post-title">New Breakthrough in Pain-Free Dentistry: Needle-Free Anesthesia</a>
+                  <span class="post-date">23 Jun 2023</span>
+                </div>
+              </div>
+            </div>
+
+            <!-- Single Widget Area --> 
+            <div class="single-widget-area adds-widget">
+              <a href="#"><img class="w-100" src="{% static 'website/img/bg-img/adds.png' %}" alt=""></a>
+            </div>
+
           </div>
         </div>
       </div>
     </div>
   </section>
-  <!-- ***** Blog Area End ***** -->
+  <!-- *****Blog Area End ***** -->
 
-  <!-- ***** Footer Area Start ***** -->  
+  <!-- ***** Footer Area Start ***** --> 
   <footer class="footer-area bg-img bg-gradient-overlay" style="background-image: url({% static 'website/img/bg-img/3.jpg' %});">
     <div class="container">
       <div class="row">
-        <!-- Single Footer Widget -->
+        <!-- Single Footer Widget --> 
         <div class="col-12 col-sm-6 col-lg-4">
           <div class="single-footer-widget">
             <a href="{% url 'home' %}" class="d-block mb-4"><img src="{% static 'website/img/core-img/logo.png' %}" alt=""></a>
@@ -409,7 +373,7 @@
 
             <!-- Social Info -->
             <div class="footer-social-info">
-               <a href="https://www.facebook.com" data-toggle="tooltip" data-placement="top" title="Facebook", target="_blank" ><i class="fa fa-facebook"></i></a>
+              <a href="https://www.facebook.com" data-toggle="tooltip" data-placement="top" title="Facebook", target="_blank" ><i class="fa fa-facebook"></i></a>
               <a href="https://www.twitter.com" data-toggle="tooltip" data-placement="top" title="Twitter" target="_blank"><i class="fa fa-twitter"></i></a>
               <a href="https://www.linkedin.com" data-toggle="tooltip" data-placement="top" title="Linkedin" target="_blank"><i class="fa fa-linkedin"></i></a>
               <a href="https://www.pinterest.com" data-toggle="tooltip" data-placement="top" title="Pinterest" target="_blank"><i class="fa fa-pinterest"></i></a>
