--- a/website/templates/contact.html
+++ b/website/templates/contact.html
@@ -88,7 +88,7 @@
                       <li><a href="{% url 'about' %}">- About Us</a></li>
                       <li><a href="{% url 'service' %}">- Service</a></li>
                       <li><a href="{% url 'pricing' %}">- Pricing</a></li>
-                      <li><a href="blog.html">- Blog</a></li>
+                      <li><a href="{% url 'blog' %}">- Blog</a></li>
                       <li><a href="{% url 'contact' %}">- Contact</a></li>
                     </ul>
                   </li>
@@ -251,15 +251,9 @@
             <nav>
               <ul class="quick-links">
                 <li><a href="{% url 'about' %}">About</a></li>
-                <li><a href="#">FAQs</a></li>
                 <li><a href="{% url 'contact' %}">Contact</a></li>
-                <li><a href="#">Policy</a></li>
-                <li><a href="#">News</a></li>
-                <li><a href="#">Advisors</a></li>
-                <li><a href="#">Careers</a></li>
-                <li><a href="#">Dentist</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Legals</a></li>
+                <li><a href="{% url 'blog' %}">Blog</a></li>
+                <li><a href="{% url 'service' %}">Services</a></li>
               </ul>
             </nav>
           </div>
