--- a/website/templates/contact.html
+++ b/website/templates/contact.html
@@ -95,7 +95,7 @@
                   <li><a href="{% url 'about' %}">About</a></li>
                   <li><a href="{% url 'service' %}">Service</a></li>
                   <li><a href="{% url 'pricing' %}">Pricing</a></li>
-                  <li><a href="#">Blog</a></li>
+                  <li><a href="{% url 'blog' %}">Blog</a></li>
                   <li><a href="{% url 'contact' %}">Contact</a></li>
                 </ul>
               </div>
