--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -292,7 +292,7 @@
               <div class="col-6 col-md-4">
                 <div class="single-service mb-70">
                   <img src="{% static 'website/img/core-img/s3.png' %}" alt="">
-                  <h6>Teeth Whitening</h6>
+                  <h6>Dental Implants</h6>
                 </div>
               </div>
 
