Booking Button Fix

--- a/website/templates/about.html
+++ b/website/templates/about.html
@@ -102,7 +102,7 @@
               <!-- Nav End -->
             </div>
 
-            <!-- Booking Now Button -->
+            <!-- Book Now Button -->
             <a href="#" class="btn dento-btn booking-btn">Book Now</a>
           </nav>
         </div>
