--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -102,7 +102,7 @@
               <!-- Nav End -->
             </div>
 
-            <!-- Booking Now Button -->
+            <!-- Book Now Button -->
             <a href="#" class="btn dento-btn booking-btn">Book Now</a>
           </nav>
         </div>
@@ -494,7 +494,7 @@
                   </div>
                 </div>
                 <div class="col-12 text-center">
-                  <button type="submit" class="btn dento-btn">Booking Now</button>
+                  <button type="submit" class="btn dento-btn">Book Now</button>
                 </div>
               </div>
             </form>
