--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -103,7 +103,7 @@
             </div>
 
             <!-- Book Now Button -->
-            <a href="#" class="btn dento-btn booking-btn">Book Now</a>
+            <a href="#book" class="btn dento-btn booking-btn">Book Now</a>
           </nav>
         </div>
       </div>
@@ -419,7 +419,7 @@
 
         <div class="col-12">
           <div class="more-btn text-center mt-50">
-            <a href="{% url 'pricing' %}" class="btn dento-btn">Read More <i class="fa fa-angle-double-right"></i></a>
+            <a href="{% url 'pricing' %}" id = "book" class="btn dento-btn">Read More <i class="fa fa-angle-double-right"></i></a>
           </div>
         </div>
       </div>
