--- a/website/templates/pricing.html
+++ b/website/templates/pricing.html
@@ -103,7 +103,7 @@
             </div>
 
             <!-- Book Now Button -->
-            <a href="#" class="btn dento-btn booking-btn">Book Now</a>
+            <a href="{% url 'home'%}#book" class="btn dento-btn booking-btn">Book Now</a>
           </nav>
         </div>
       </div>
