Booking Confirmation Message

--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -113,6 +113,9 @@
 
     <!-- ***** Welcome Area Start ***** -->
   <section class="welcome-area">
+    {% if name %}
+      <center><h6> Thank You {{name}}, your booking is being processed. You will recieve a conformation email shortly.</h6></center>
+    {% endif %}
     <!-- Welcome Slides -->
     <div class="welcome-slides owl-carousel">
       <!-- Single Welcome Slide --> 
