--- a/website/templates/contact.html
+++ b/website/templates/contact.html
@@ -37,8 +37,8 @@
           <!-- Top Content -->
           <div class="col-6 col-md-9 col-lg-8">
             <div class="top-header-content">
-              <a href="#" data-toggle="tooltip" data-placement="bottom" title="80 Smilescape Street, Glasgow, United Kingdom"><i class="fa fa-map-marker"></i> <span>80 Smilescape Street, Glasgow, United Kingdom</span></a>
-              <a href="#" data-toggle="tooltip" data-placement="bottom" title="info.smilescape@gmail.com"><i class="fa fa-envelope"></i> <span>info.smilescape@gmail.com</span></a>
+              <a href="https://goo.gl/maps/ow8UfYte8v4UwKwa6" data-toggle="tooltip" data-placement="bottom" title="80 Smilescape Street, Glasgow, United Kingdom" target = "_blank"><i class="fa fa-map-marker"></i> <span>80 Smilescape Street, Glasgow, United Kingdom</span></a>
+              <a href="mailto:info.smilescape@gmail.com" data-toggle="tooltip" data-placement="bottom" title="info.smilescape@gmail.com"><i class="fa fa-envelope"></i> <span>info.smilescape@gmail.com</span></a>
             </div>
           </div>
           <!-- Top Header Social Info -->
