--- a/website/templates/service.html
+++ b/website/templates/service.html
@@ -171,7 +171,7 @@
               <img src="{% static 'website/img/core-img/s8.png' %}" alt="">
             </div>
             <h5>Missing Teeth</h5>
-            <p>Regain the functionality and aesthetics of your smile with innovative solutions for missing teeth, such as dental bridges or dentures, customized to restore your confidence and oral function.</p>
+            <p>Regain the functionality and aesthetics of your smile with innovative solutions for missing teeth, such as dental bridges or dentures, customised to restore your confidence and oral function.</p>
           </div>
         </div>
 
@@ -193,7 +193,7 @@
               <img src="{% static 'website/img/core-img/s10.png' %}" alt="">
             </div>
             <h5>Examination</h5>
-            <p>Experience thorough dental examinations to ensure optimal oral health, with comprehensive assessments, X-rays, and personalized treatment plans tailored to your needs.</p>
+            <p>Experience thorough dental examinations to ensure optimal oral health, with comprehensive assessments, X-rays, and personalised treatment plans tailored to your needs.</p>
           </div>
         </div>
 
@@ -204,7 +204,7 @@
               <img src="{% static 'website/img/core-img/s6.png' %}" alt="">
             </div>
             <h5>Teeth Pain</h5>
-            <p>Find relief from teeth pain with expert dental care, including accurate diagnosis, targeted treatments, and personalized solutions to alleviate discomfort and restore your oral health.</p>
+            <p>Find relief from teeth pain with expert dental care, including accurate diagnosis, targeted treatments, and personalised solutions to alleviate discomfort and restore your oral health.</p>
           </div>
         </div>
 
@@ -242,7 +242,7 @@
               </div>
               <!-- Content -->
               <div class="testimonial-content">
-                <h5>"Outstanding dental practice! Compassionate staff, state-of-the-art facility, personalized care, and a focus on oral health education. Highly recommended!"</h5>
+                <h5>"Outstanding dental practice! Compassionate staff, state-of-the-art facility, personalised care, and a focus on oral health education. Highly recommended!"</h5>
                 <h6>Ethan Williams</h6>
                 <p>Dental Patient</p>
               </div>
