Social Media Footer

--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -775,16 +775,9 @@
         <div class="col-12 col-sm-6 col-lg">
           <div class="single-footer-widget">
             <!-- Widget Title -->
-            <h5 class="widget-title">Newsletter</h5>
+            <h5 class="widget-title">Social Media</h5>
 
-            <p>Weekly News Articles & Offers Directly to Your Mailbox. <b>Free of Charge.</b></p>
-            <!-- Newsletter Form -->
-            <div class="footer-newsletter-form">
-              <form action="#" method="post">
-                <input type="email" name="nl-email" value="" placeholder="Email Address">
-                <button type="submit"><i class="fa fa-paper-plane" aria-hidden="true"></i></button>
-              </form>
-            </div>
+            <p>Stay updated effortlessly with our latest endeavors!</p>
 
             <!-- Social Info -->
             <div class="footer-social-info">
